# ClarityRay

./: AGENTS.md  BUILD_PLAN.md  CLARITY_SPEC.md  CONTEXT.md  CURRENT_SYSTEM_CONTEXT.md  README.md  clarity-schema.json  just_context.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  start_api.sh  test.json  test_db.py  test_db2.py  test_db_kwargs.py  test_db_pooler.py
api/: config.py  deps.py  main.py  requirements.txt  seed.py
api/routes/: models.py
api/services/: storage.py  validation.py
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/analysis/: layout.tsx  page.tsx
app/analyze/: page.tsx
app/auth/: page.tsx
app/dashboard/: page.tsx
app/models/: page.tsx
app/onboarding/: page.tsx
app/sections/: SystemHero.jsx
app/settings/: page.tsx
backend/: API.md  SCHEMA.md  package-lock.json  package.json
backend/data/: db.json
backend/src/: app.js  server.js
clarityray-converter pip package/converter/: pyproject.toml
clarityray-converter pip package/converter/clarityray/: convert.py  errors.py  spec.py
components/: ConsentModal.tsx  GradCAMViewer.tsx  ResultsPanel.tsx  UploadZone.tsx
components/analysis/: AnalysisPanel.tsx  BackgroundFX.tsx  BottomBar.tsx  ControlPanel.tsx  LogPanel.tsx  ScanViewer.tsx  ScannerPanel.tsx  StatusPanel.tsx  SystemPanel.tsx  TopBar.tsx
components/nav/: TopBar.tsx
converter/: README.md
hooks/: useClarityRay.ts
layouts/: AppShell.tsx
pages/: README.md  routes.ts
public/: README.md
utils/: api.ts  auth.ts  format.ts  routes.ts  types.ts
(+67 files in other folders)
